fix: removes horizontal scrollbar

--- a/mock-1/public/common.css
+++ b/mock-1/public/common.css
@@ -185,6 +185,7 @@ p {
   justify-content: space-between;
   align-content: space-between;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .plates__plate {
